# kinefix

./: .gitignore  CMakeLists.txt  README.md
include/kinefix/: kinefix.h  kinefix.hpp
src/: kinefix.c  kinefix_sine_quarter_q16.inc  kinefix_sine_quarter_q32.inc
tests/: kinefix_tests.c
